// Vitest Snapshot v1

exports[`Header > should render correctly 1`] = `
<nav
  class="sticky-top text-white navbar navbar-expand-md navbar-dark"
  data-testid="header"
  id="header"
>
  <div
    class="container"
  >
    <a
      class="navbar-brand text-white navbar-brand"
      href="/"
    >
      Movie
      <b
        class="fw-bold"
      >
        Face
      </b>
    </a>
    <button
      aria-controls="navbarScroll"
      aria-label="Toggle navigation"
      class="border-0 navbar-toggler collapsed"
      type="button"
    >
      <span
        class="navbar-toggler-icon"
      />
    </button>
    <div
      class="navbar-collapse collapse"
    >
      <div
        class="align-items-md-center my-5 my-md-0 ms-auto navbar-nav"
      >
        <form
          class="d-flex"
          data-testid="search-form"
        >
          <input
            aria-label="Movie or show title"
            class="rounded-0 border-0 form-control"
            placeholder="Movie or show title"
            type="search"
            value=""
          />
          <button
            class="rounded-0 no-outline disabled btn btn-success"
            disabled=""
            type="submit"
          >
            Search
          </button>
        </form>
        <span
          class="d-none d-md-block mx-md-2 text-muted"
        >
          |
        </span>
        <form
          class=""
          data-testid="filter-form"
        >
          <label
            class="form-label d-flex align-items-center mb-0 form-label"
            for="filter"
          >
            <span
              class="d-none d-lg-inline me-2"
            >
              Showing
            </span>
            <select
              aria-label="'Showing' filter form"
              class="form-control form-select border-0 rounded-0 form-select"
              id="filter"
            >
              <option
                value="popular"
              >
                Popular
              </option>
              <option
                value="topRated"
              >
                Top Rated
              </option>
              <option
                value="upcoming"
              >
                Upcoming
              </option>
              <option
                value="nowPlaying"
              >
                Now Playing
              </option>
            </select>
          </label>
        </form>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Header > should render correctly 2`] = `
<form
  class=""
  data-testid="filter-form"
>
  <label
    class="form-label d-flex align-items-center mb-0 form-label"
    for="filter"
  >
    <span
      class="d-none d-lg-inline me-2"
    >
      Showing
    </span>
    <select
      aria-label="'Showing' filter form"
      class="form-control form-select border-0 rounded-0 form-select"
      id="filter"
    >
      <option
        value="popular"
      >
        Popular
      </option>
      <option
        value="topRated"
      >
        Top Rated
      </option>
      <option
        value="upcoming"
      >
        Upcoming
      </option>
      <option
        value="nowPlaying"
      >
        Now Playing
      </option>
    </select>
  </label>
</form>
`;

exports[`Header > should render correctly 3`] = `
<form
  class="d-flex"
  data-testid="search-form"
>
  <input
    aria-label="Movie or show title"
    class="rounded-0 border-0 form-control"
    placeholder="Movie or show title"
    type="search"
    value=""
  />
  <button
    class="rounded-0 no-outline disabled btn btn-success"
    disabled=""
    type="submit"
  >
    Search
  </button>
</form>
`;
